--- a/stock-app/requirements.txt
+++ b/stock-app/requirements.txt
@@ -1,9 +1,11 @@
-fastapi
-pydantic
+fastapi==0.115.12
+fastapi-cli==0.0.7
+numpy==1.26.3
+pandas==2.2.3
+pandas_ta==0.3.14b0
+pydantic==2.11.4
+pydantic_core==2.33.2
+requests==2.31.0
+scikit-learn==1.6.1
+uvicorn==0.34.2
 pydantic_settings
-uvicorn
-pandas
-numpy
-requests
-pandas_ta
-scikit-learn
